Sync Class-File API (Preview) (#15)
Close #14